# UBB

./: .gitignore  main.py  precizie.py
.obsidian/: workspace.json
Lab4-6/: main.py
Lab4-6/model/: Expense.py
Lab4-6/programs/: expenseProgram.py
Lab4-6/utils/: consoleActions.py
Semestrul 1/AM/: pi_balan.py  test.py
Semestrul 1/Algebra/Materiale/: Cum sa inveti intr-o zi algebra.txt
Semestrul 1/Analiza/: pi_balan.py
Semestrul 1/Arhitectura sistemelor de calcul/Cursuri/: Curs 1.md  Curs 13.md  Curs 2.md  Curs 3.md  Curs 4.md  Curs 5.md  Curs 6.md  Curs 7.md  Docs 7-9 copy.md  Lab1.md
Semestrul 1/Arhitectura sistemelor de calcul/Laboratoare/: sem1.asm  sem1.lst
Semestrul 1/Arhitectura sistemelor de calcul/practic/: practic.asm
Semestrul 1/Fundamentele Programarii/FP/: Curs 1.md  Curs 2.md  Docs lab3.md  Seminar 1.md  seminar3-5.py
Semestrul 2/.obsidian/: workspace.json
Semestrul 2/OOP/Laboratoare/Lab3/: CMakeLists.txt  Lab3  main.c  masina.c  masina.h  repo.c  repo.h  service.c  tests.c  tests.h  ui.c
Semestrul 2/OOP/Laboratoare/Lab3/Lab3.dSYM/Contents/Resources/DWARF/: Lab3
Semestrul 2/OOP/Laboratoare/Lab3/Lab3.dSYM/Contents/Resources/Relocations/aarch64/: Lab3.yml
Semestrul 2/OOP/Laboratoare/Lab3/Lab3.exe.dSYM/Contents/Resources/Relocations/aarch64/: Lab3.exe.yml
Semestrul 2/OOP/Laboratoare/Lab6/: CMakeLists.txt  VectorDinamic.cpp  VectorDinamic.h  default.profraw  lab  main.cpp  oferta.cpp  oferta.h  repository.cpp  repository.h  service.cpp  service.h  tests.cpp  ui.cpp  ui.h  validator.cpp  validator.h
Semestrul 2/OOP/Laboratoare/lab5 3/: CMakeLists.txt
Semestrul 2/Sisteme Dinamice/: lab1.mw
Semestrul 2/Sisteme de operare/: Seminar 1.md  \  semnale  semnale.c
(+507 files in other folders)
